<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity_title">Quantity</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
    <string name="amount">0</string>
    <string name="order_summary">Order Summary</string>
    <string name="price">£00.00</string>
    <string name="order">Order</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g> </string>
    <string name="order_summary_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_total">Total:£<xliff:g id="price" example="£10">%d</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_thanks"> Thank you!</string>
    <string name="email_subject">Just Java order for Luis</string>
</resources>
